# QuickDeskRepo

./: .gitignore  README.md  coverage.xml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
api/: pyproject.toml
api/tests/: test_health.py
deployment/: .env  docker-compose.dev.yml  package.json
web/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
web/.tanstack/tmp/: 9fec3ace-b9c6d966e6be1ec05c2eca659dd752a4  fba94d91-1981f82fe4c1e3543a26a8b6a257748e
web/src/: globals.css  routeTree.gen.ts
web/src/Services/: AuthService.ts
web/src/Store/: auth.store.ts
web/src/components/: NotFoundPage.tsx  categoryNavigator.tsx  columns.tsx  data-table.tsx  navbar.tsx  staff-sidebar.tsx  ticket-grid.tsx  ticket-table.tsx
web/src/components/Forms/: EditProfileForm.tsx
web/src/components/settings/: Appearance.tsx  Notifications.tsx  SettingsContainer.tsx  userProfile.tsx
web/src/components/ui/: avatar-demo.tsx  avatar.tsx  badge.tsx  breadcrumb-demo.tsx  carousel.tsx  carouselPartners.tsx  columns.tsx  data-table-dem.tsx  data-table.tsx  dropdown-menu.tsx  footer.tsx  heroSection.tsx  switch.tsx  ticket-columns.tsx  ticketChart.tsx  userstats-card.tsx
web/src/hooks/: use-mobile.ts
web/src/mock/: categories.ts  formDefinition.ts  ticketMock.ts  tickets.ts  user.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/account/: settings.tsx
web/src/routes/auth/: login.tsx  register.tsx
web/src/routes/services/: indexServices.tsx  route.tsx
web/src/types/: ticket.ts
(+9 files in other folders)
